crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_prompt_password_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log ─────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┏▶Local ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌ Remote ──────────────────────────────┐
┃(not available yet)                   ┃│(not available yet)                   │
┃                                      ┃│                                      │
┃     ┌ Password required ───────────────────────────────────────────────┐     │
┃     │ ▶Password for anna@examp… │ •••••••                              │     │
┃     │                                                                  │     │
┃     │                        [ OK ]  [ Cancel ]                        │     │
┃     └──────────────────────────────────────────────────────────────────┘     │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┃                                      ┃│                                      │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└──────────────────────────────────────┘
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                       F1 help  F10 quit
